2008-05-10  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-type-utils.c
	* src/libtracker-common/tracker-type-utils.h:
	(tracker_boolean_as_text_to_number): New function.
	
	* src/libtracker-common/tracker-utils.c
	* src/libtracker-common/tracker-utils.h
	(tracker_escape_string): Moved from tracker-db-sqlite to here.

	* src/trackerd/tracker-db-sqlite.c
	(tracker_db_load_service_file): Splitted in three functions, for
	.metadata, .services and .extensions files. Renamed to 
	load_service_configuration_file, and now it is an static function.
	Removed duplicate code betwwen load_sql_file and load_sql_trigger.

	* src/trackerd/tracker-db-sqlite.h:
	(tracker_db_load_service_file) removed from the public API.
	
	* src/trackerd/tracker-db.c: Commented unused lines.


2008-05-09  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/Makefile.am
	* src/trackerd/tracker-db-manager.c
	* src/trackerd/tracker-db-manager.h: New module to handle
	databases locations, names and parameters.
	
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-indexer.c: Using new module. 
	(open_db) is now open_db_interface.
	
	* src/trackerd/tracker-indexer.h: DB filenames moved to new
	module.
	
	* src/trackerd/tracker-main.c: Init/term the new module
	
	* src/trackerd/tracker-main.h: 
	(tracker->services_dir): Removed

2008-05-09  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h: 
	(tracker_db_set_default_pragmas): Now static function
	called set_default_pragmas and using TrackerDBInterface
	(set_params): Uses TrackerDBInterface instead of DBConnection.

2008-05-09  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-main.c
	* src/trackerd/tracker-process-files.c
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h:
	(tracker_db_exec_no_reply): Uses TrackerDBInterface instead of 
	DBConnection.
	
2008-05-09  Philip Van Hoof  <pvanhoof@gnome.org>
